# ba_in_the_large

./: .gitignore  README.md  export_for_llm.py  main.py  setup.py
src/cpp/: CMakeLists.txt  ba_core.cpp  ba_core.h  pybind_wrapper.cpp
src/python/: main.py
src/python/ba_in_the_large/: __init__.py  ba_solver.py  plotly_visualizer.py  utils.py  visualizer.py
